tests/Fase2-Semantic/error/t31-for_initialization_not_integer.ctds
class aux {

}

class main {
    integer x;
    

    integer add( integer b){
        integer a;
        a = x+b;
        for i = true, 10 break;
        return a;
    }

    void main(){
        x=0;
        add(2);
    }
    
}
